--- a/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
+++ b/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,54 @@
      <!-- If your app doesn't need to access media files that other apps created,
           set the "maxSdkVersion" attribute to "28" instead. -->
           <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+          <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+            
+                 <!-- Required only if your app needs to access videos
+                      that other apps created. -->
+                 <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+                 
+                 <!-- Required only if your app needs to access audio files
+                      that other apps created. -->
+                 <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+                 
+                 <!-- If your app doesn't need to access media files that other apps created,
+                      set the "maxSdkVersion" attribute to "28" instead. -->
+                 <!-- <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+                                  android:maxSdkVersion="32" />
+                 
+                 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+                                  android:maxSdkVersion="29" /> -->
+                
+               
+            
+                <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+                <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />      <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> -->
+                <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+                <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+                <uses-permission android:name="android.permission.CAMERA" />
+                <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+                <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+                <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+                
+                <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+                <!-- <uses-permission android:name="android.permission.CAMERA"/> -->
+                 <!-- Permisos para contactos -->
+                 <uses-permission android:name="android.permission.READ_CONTACTS"/>
+                 <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+                 <!-- Read Contacts from phone -->
+                 <!-- <uses-permission android:name="android.permission.read_contacts" /> -->
+                 <uses-permission android:name="android.permission.read_phone_state" />
+                 <uses-permission android:name="android.permission.GET_TASKS" />
+                 <!-- <uses-permission android:name="android.permission.READ_CALL_LOG" /> -->
+            
+                 <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> -->
+                 <!-- <uses-permission android:name="android.permission.WAKE_LOCK"/> -->
+                 
+                 <!-- For apps with targetSDK=31 (Android 12) -->
+                 <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+                 <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
+                 <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+                 <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
           <queries>
                <!-- If your app opens https URLs -->
                <intent>
