--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -58,7 +58,8 @@ dependencies:
   path_provider: ^2.0.11
   permission_handler: ^10.2.0
   flutter_system_ringtones: ^0.0.6
-  # flutter_ringtone_player: ^3.2.0
+  flutter_ringtone_player: ^3.2.0
+  audioplayers: ^3.0.1
   
   slidable_button: ^2.0.0+1
   avatar_glow: ^2.0.2 #Animacion tipo radar
