--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   onboarding: ^2.1.0
+
+  numberpicker: ^2.1.1
   
   http: ^0.13.4
   get: ^4.6.5
@@ -60,6 +62,8 @@ dependencies:
   flutter_system_ringtones: ^0.0.6
   flutter_ringtone_player: ^3.2.0
   audioplayers: ^3.0.1
+
+  jiffy: ^4.0.0
   
   slidable_button: ^2.0.0+1
   avatar_glow: ^2.0.2 #Animacion tipo radar
