--- a/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
+++ b/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
 
 
     <queries>
