--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -82,8 +82,8 @@ dependencies:
   country_state_city_picker: ^1.2.8
   google_fonts: ^3.0.1
   notification_center: ^0.0.2
-  
-  
+  camera: ^0.10.3+2
+  gallery_saver: ^2.3.2
   
 dev_dependencies:
   flutter_test:
