--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   audioplayers: ^3.0.1
 
   jiffy: ^5.0.0
+
+  flutter_rating_bar: ^4.0.1
   
   slidable_button: ^2.0.0+1
   avatar_glow: ^2.0.2 #Animacion tipo radar
