se creo la pantalla de status de los contacots y editar contactos, se hizo validacion de campos y del token en la pantalla de usuario , se cambio el logo de los alerts, se agrego la redireccion al momento de la primera configuracion, entre otras mejoras

--- a/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
+++ b/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
@@ -55,9 +55,11 @@
     </queries>
 
     <application
-        android:label="iFeelFine"
+        android:label="AlertFriends"
         android:name="${applicationName}"
+        
         android:icon="@mipmap/logo_alertfriends">
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
