--- a/alonefy_app/alonefy_app/ios/Runner/Info.plist
+++ b/alonefy_app/alonefy_app/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>IFeelFine</string>
+	<string>AlertFriends</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
