--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -87,6 +87,8 @@ dependencies:
   camerax: ^0.1.1
   gallery_saver: ^2.3.2
   flutter_phoenix: ^1.1.1
+  video_player: ^2.5.1
+  flutter_cache_manager: ^3.2.0
   
   
 dev_dependencies:
