--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   rxdart: ^0.27.2
   provider: ^6.0.3
   flutter_local_notifications: ^13.0.0
-  awesome_notifications: ^0.7.0-beta.7+5
+  # awesome_notifications: ^0.7.0-beta.7+5
 
   firebase_core: ^2.10.0
 
