--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   flutter_phoenix: ^1.1.1
   video_player: ^2.5.1
   flutter_cache_manager: ^3.2.0
+  webview_flutter: ^4.2.2
   
   
 dev_dependencies:
