--- a/alonefy_app/alonefy_app/android/gradle/wrapper/gradle-wrapper.properties
+++ b/alonefy_app/alonefy_app/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
+#Tue Jul 04 15:03:36 CEST 2023
+-Djava.net.preferIPv4Stack=true
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4.2-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-all.zip
--Djava.net.preferIPv4Stack=true
