--- a/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
+++ b/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
@@ -15,40 +15,26 @@
 
     <!-- If your app doesn't need to access media files that other apps created,
          set the "maxSdkVersion" attribute to "28" instead. -->
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    
-    <uses-permission android:name="android.permission.RingtoneManager.TYPE_ALARM"/>
-    <uses-permission android:name="android.permission.RingtoneManager.TYPE_NOTIFICATION"/>
-    <uses-permission android:name="android.permission.RingtoneManager.TYPE_RINGTONE"/>
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- Permiso para acceder a la configuración de políticas de notificación -->
-    <uses-permission android:name="android.permission.access_notification_policy" />
-
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" /> <!-- To read images created by other apps -->
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> <!-- To read audios created by other apps -->
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" /> <!-- To read vidoes created by other apps -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+         <uses-permission android:name="android.permission.INTERNET"/>
+         <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+         <uses-permission android:name="android.permission.READ_CONTACTS"/>
+         <uses-permission android:name="android.permission.CAMERA" />
+         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+         <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+     
+     
+         <uses-permission android:name="android.permission.WAKE_LOCK" />
+     
+         <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+         <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+         <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+         <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+         <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+         <uses-permission android:name="android.permission.BACKGROUND_SERVICE"/>
+         <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+         <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <queries>
         <!-- If your app opens https URLs -->
         <intent>
@@ -72,12 +58,11 @@
         </intent>
         
     </queries>
-
+ <!-- android:showWhenLocked="true"
+        android:turnScreenOn="true" -->
     <application
         android:label="AlertFriends"
         android:name="${applicationName}"
-        android:showOnLockScreen="true"
-        android:turnScreenOn="true"
         android:icon="@mipmap/logo_alertfriends_v2">
 
         <activity
@@ -87,8 +72,10 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:showWhenLocked="true"
-            android:turnScreenOn="true"
+            android:showWhenLocked="true" 
+            android:turnScreenOn="true" 
+            android:showOnLockScreen="true" 
+           
             android:windowSoftInputMode="adjustResize">
             <meta-data
             android:name="io.flutter.embedding.android.SplashScreenDrawable"
@@ -133,8 +120,10 @@
             android:value="uri_channel_name" />
             <service
             android:name="com.alertfriends.alertfriends.ForegroundService"        
-            android:exported="false"
+            android:exported="true"
             android:stopWithTask="false"/>
+            <receiver android:name="com.alertfriends.alertfriends.ScheduledNotificationReceiver" />
+
             <receiver
             android:name="com.alertfriends.alertfriends.ScheduledNotificationBootReceiver"
             android:enabled="true"
@@ -142,9 +131,13 @@
             android:directBootAware="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.alertfriends"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+        <receiver android:exported="true" android:name="com.alertfriends.alertfriends.ActionBroadcastReceiver" />
     </application>
    
 </manifest>
