--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -44,12 +44,14 @@ dependencies:
   intl: ^0.18.1
   
   
-  flutter_local_notifications: ^13.0.0
-  flutter_local_notifications_platform_interface: ^6.0.0
+  flutter_local_notifications: ^15.1.0+1
+  
 
-  firebase_core: ^2.15.0
+  firebase_core: ^2.15.1
 
-  firebase_messaging: ^14.6.5
+
+  firebase_messaging: ^14.5.0
+
 
   flutter_inapp_purchase: ^5.4.2
   
@@ -61,7 +63,7 @@ dependencies:
   device_info_plus: ^9.0.3
   geolocator: ^9.0.2
   
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.1.0
   image_picker: ^0.8.6
   
   permission_handler: ^10.4.3
@@ -98,7 +100,8 @@ dependencies:
   webview_flutter: ^4.2.2
   
 
-  flutter_background_service: ^5.0.0
+  flutter_background_service: ^5.0.1
+  flutter_background_service_android: ^6.0.1
   icons_launcher: ^2.1.3
   
   flutter_timezone: ^1.0.7
