--- a/alonefy_app/alonefy_app/.vscode/launch.json
+++ b/alonefy_app/alonefy_app/.vscode/launch.json
@@ -5,18 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "ifeelefine",
+            "name": "alertFriends",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "ifeelefine (profile mode)",
+            "name": "alertFriends (profile mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "ifeelefine (release mode)",
+            "name": "alertFriends (release mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
