--- a/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
+++ b/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
@@ -27,14 +27,21 @@
      
          <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
          <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+         <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
          <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
          <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
          <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
          <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
          <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+         <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
+         <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+         <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
+         <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
          <uses-permission android:name="android.permission.BACKGROUND_SERVICE"/>
          <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
          <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+        
+         
     <queries>
         <!-- If your app opens https URLs -->
         <intent>
@@ -121,23 +128,39 @@
             <service
             android:name="com.alertfriends.alertfriends.ForegroundService"        
             android:exported="true"
-            android:stopWithTask="false"/>
-            <receiver android:name="com.alertfriends.alertfriends.ScheduledNotificationReceiver" />
-
-            <receiver
-            android:name="com.alertfriends.alertfriends.ScheduledNotificationBootReceiver"
+            android:stopWithTask="false"
+            android:foregroundServiceType="location|microphone|mediaPlayback|camera|health"/>
+            
+           
+             <receiver
+            android:name=".ScheduledNotificationReceiver"
             android:enabled="true"
-            android:exported="false"
-            android:directBootAware="true">
+            android:exported="true"
+            android:directBootAware="true" 
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.alertfriends"/>
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            </receiver>
+            <receiver
+            android:name=".ScheduledNotificationBootReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:directBootAware="true" 
+           >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.alertfriends"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <!-- <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED"/> -->
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-        <receiver android:exported="true" android:name="com.alertfriends.alertfriends.ActionBroadcastReceiver" />
+        <receiver android:exported="false" android:name="com.alertfriends.alertfriends.ActionBroadcastReceiver" />
+        
     </application>
    
 </manifest>
