--- a/alonefy_app/alonefy_app/pubspec.yaml
+++ b/alonefy_app/alonefy_app/pubspec.yaml
@@ -39,17 +39,16 @@ dependencies:
   cupertino_icons: ^1.0.5
   onboarding: ^2.1.0
   numberpicker: ^2.1.1
-  http: ^0.13.4
+  http: ^0.13.3
   get: ^4.6.5
   intl: ^0.18.1
   
-
   notification_center: ^0.0.2
-  flutter_background_service: ^5.0.1
-  flutter_background_service_android: ^6.0.1
-  flutter_local_notifications: ^15.1.0+1
-  firebase_core: ^2.15.1
-  firebase_messaging: ^14.5.0
+  flutter_background_service: ^5.0.3
+  flutter_background_service_android: ^6.2.0
+  flutter_local_notifications: ^15.1.2
+  firebase_core: ^2.22.0
+  firebase_messaging: ^14.7.4
 
   flutter_inapp_purchase: ^5.4.2
   
@@ -61,10 +60,10 @@ dependencies:
   device_info_plus: ^9.0.3
   geolocator: ^9.0.2
   
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.2.2
   image_picker: ^0.8.6
   
-  permission_handler: ^10.4.3
+  permission_handler: ^10.4.5
 
   flutter_system_ringtones: ^0.0.6
   flutter_ringtone_player: ^3.2.0
@@ -86,7 +85,7 @@ dependencies:
   google_fonts: ^4.0.0
   
   camera: ^0.10.3+2
-  geocoding: ^2.1.0
+  geocoding: ^2.1.1
   gallery_saver: ^2.3.0
   
   video_player: ^2.6.1
@@ -96,10 +95,9 @@ dependencies:
   icons_launcher: ^2.1.3
   
   flutter_timezone: ^1.0.7
+  flutter_overlay_window: ^0.4.3
+  native_image_cropper: ^0.4.0
   
-  hive_generator: ^1.1.3
-  build_runner: ^2.4.6
-
 
 dev_dependencies:
   flutter_test:
@@ -114,6 +112,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.2
   
+  hive_generator: ^1.1.3
+  build_runner: ^2.4.6
  
 flutter_launcher_icons: "^0.9.2"
 flutter_icons:
