--- a/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
+++ b/alonefy_app/alonefy_app/android/app/src/main/AndroidManifest.xml
@@ -82,7 +82,7 @@
             android:showWhenLocked="true" 
             android:turnScreenOn="true" 
             android:showOnLockScreen="true" 
-           
+            android:requestLegacyExternalStorage="true"
             android:windowSoftInputMode="adjustResize">
             <meta-data
             android:name="io.flutter.embedding.android.SplashScreenDrawable"
